src/Masa.Stack.Components/wwwroot/css/app.css
/* ... */
.masa-stack-components .hover-pointer {
    cursor: pointer;
}

.select_vertical_line .m-select__slot .m-input__append-inner:nth-last-of-type(1) {
    border-left: solid 1px rgba(0,0,0,.12) !important;
    min-height: 24px !important;
}

/* avatar */
.masa-stack-components .avatar-overlay-tips {
    background: rgba(27, 37, 89, 0.5);
}

    .masa-stack-components .avatar-overlay-tips:active {
        background: rgba(27, 37, 89, 0.8);
    }

.masa-stack-components .s-auto-complete input {
    color: #7681AB;
}

.masa-stack-components .rounded-sm-before::before {
    border-radius: 4px;
}

.masa-stack-components .m-input.name-textfield .m-text-field__slot {
    padding-bottom: 2px;
}

.masa-stack-components .m-input.name-textfield .m-input__slot::before {
    border-color: #E2E7F4 !important;
}

.masa-stack-components .m-input.name-textfield .m-text-field__slot input {
    text-align: center;
    color: #323D6F !important;
    font-family: Roboto !important;
    font-size: 1.25rem !important;
    font-style: normal !important;
    font-weight: 700 !important;
    line-height: 1.875rem !important;
    letter-spacing: 0em !important;
}

    .masa-stack-components .m-input.name-textfield .m-text-field__slot input::placeholder {
        color: #A3AED0 !important;
        text-align: center;
        font-family: Roboto !important;
        font-size: 1.25rem !important;
        font-style: normal !important;
        font-weight: 700 !important;
        line-height: 1.875rem !important;
        letter-spacing: 0em !important;
    }

.s-autocomplete-selection {
    width: 100% !important;
    padding-right: 0px !important;
    min-height: 40px !important;
    height: 40px !important;
}

    .s-autocomplete-selection .m-list-item {
        width: 100% !important;
        padding-right: 0px !important;
        min-height: 40px !important;
        height: 40px !important;
    }

    .s-autocomplete-selection .icon-hover {
        width: 18px !important;
        transition: 0.5s !important;
    }

    .s-autocomplete-selection .icon-unhover {
        opacity: 0 !important;
        height: 0px !important;
        margin-left: -24px !important;
        transition: 0.4s !important;
    }

.masa-stack-components .s-search .m-input__control {
    min-height: 40px;
}

